# menu-scraper-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: binary-build.yml  publish-package.yml
src/: api.rs  config.rs  main.rs
