[package]
name = "menu-scraper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "json", "rustls-tls", "rustls"] }
scraper = "0.17.1"
yaml = "0.3.0"
anyhow = "1.0.71"
serde = { version = "1.0.171", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"]}
regex = "1.9.1"
serde_repr = "0.1.14"
serde_json = "1.0.103"
confy = "0.5.1"
log = "0.4.19"
env_logger = "0.10.0"
